replaced logo on moile, tweaked design of nav bar and menu, fixed spacing between cards on mobile

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -91,6 +91,7 @@ p {
 }
 
 #mobile-header{
+
   height: 50px;
   background-color: #363636;
   padding: 10px 0px 10px 10px;
@@ -99,15 +100,13 @@ p {
   z-index: 3;
   width: 100%;
   top: 0;
-  box-shadow: 0 3px 10px rgba(0,0,0,.23),
-              0 3px 10px rgba(0,0,0,.16);
-  border-bottom: 1px solid white;
+  border-bottom: 1px solid #ddd;
   img{
-    height: 40px;
+    height: 80px;
     display: block;
     margin-left: auto;
     margin-right: auto;
-    margin-top: -35px;
+    margin-top: -57px;
   }
   #mobile-xc{
     @extend %face-serif;
@@ -115,15 +114,18 @@ p {
     color: black;
     display: inline-block;
     vertical-align: bottom;
-    padding-top: 8px;
+    padding-top: 12px;
     height: 52px;
     width: 15%;
-    margin-top: -50px;
+    margin-top: -68px;
     float: right;
     background-color: #808080;
     text-align: center;
-    font-size: 30px;
+    font-size: 25px;
     font-style: italic;
+    font-weight: 400;
+    letter-spacing: 0;
+    color: white;
   }
 }
 
@@ -136,7 +138,7 @@ p {
 #mobile-navigation{
   height: 100%;
   background-color:#E8E8E8;
-  opacity: 0.9;
+  opacity: 0.975;
   z-index: 4;
   left: -15.625em; /*left or right and the width of your navigation panel*/
   width: 15.625em; /*should match the above value*/
@@ -144,14 +146,13 @@ p {
 
   }
   a{
-    color: #A3A3A3;
+    color: #191919;
     text-decoration: none;
     display: block;
     padding: 1.2em 1.2em 1.2em 1.2em;
     outline: none;
     box-shadow: inset 0 -1px rgba(0,0,0,0.2);
     text-transform: uppercase;
-    text-shadow: 0 0 1px rgba(255,255,255,0.1);
     letter-spacing: 1px;
     font-weight: 500;
   }
@@ -166,7 +167,6 @@ p {
 
 header#site-header {
   background-color: white;
-  margin-bottom: -30px;
   padding: 10px 0 0;
   a {
     text-decoration: none;
@@ -601,6 +601,10 @@ a.link-wrap{
   display: block;
 }
 
+section.front-page {
+  margin-top: 0px;
+}
+
 section.ytv {
   margin-top: 0;
 
@@ -681,6 +685,7 @@ section.weekend {
 /// RESPONSIVE STUFF
 
 @media(max-width:980px) {
+
 
 
   section.category {
@@ -772,6 +777,10 @@ section.weekend {
 
 @media(max-width:480px) {
 
+  a {
+    text-decoration: none;
+  }
+
   
 
   #site-header, #xc-web{
@@ -783,6 +792,10 @@ section.weekend {
   section.category {
     width: 90%;
     margin: 0 auto;
+  }
+
+  section.front-page {
+    margin-top: 40px;
   }
 
 
@@ -811,6 +824,7 @@ section.weekend {
   
 
   .card {
+    margin-bottom: 25px;
     width: 100%;
     &.story-simple, &.story-opinion {
       height: auto;
@@ -890,7 +904,6 @@ section.weekend {
 
 header#site-header {
   background-color: white;
-  margin-bottom: -100px;
   padding: 10px 0 0;
   a {
     text-decoration: none;
